--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="type">Type</string>
     <string name="origin">Origin</string>
     <string name="episode_count">Episode count</string>
+    <string name="view_all_episodes">View all episodes</string>
 </resources>
